# sjaa-ephemeris-archive-1954-2004

./: .gitignore  extract_pdf_text.py  fix_case_renames.sh  index.html  inject_text_simple.py  inject_text_to_pdf.py  rename_pdf.sh  rename_pdf_git.sh
Eighties/: Eighties.html  eph80.html  eph81.html  eph82.html  eph83.html  eph84.html  eph85.html  eph86.html  eph87.html  eph88.html  eph89.html  webfixes.txt
Fifties/: Fifties.html  SJAA1954-embeddings.json  SJAA1954.json  SJAA1954.txt  SJAA1955-embeddings.json  SJAA1955.json  SJAA1955.txt  SJAA1956-embeddings.json  SJAA1956.json  SJAA1956.txt  SJAA1957-embeddings.json  SJAA1957.json  SJAA1957.txt  SJAA_Article_of_Inc-embeddings.json  SJAA_Article_of_Inc.json  SJAA_Article_of_Inc.txt
Naughts/: Naughts.html  eph00.html  eph01.html  eph02.html  eph03.html  eph04.html  eph94.html
Nineties/: Nineties.html  eph90.html  eph91.html  eph92.html  eph93.html  eph94.html  eph95.html  eph96.html  eph97.html  eph98.html  eph99.html
Seventies/: SJAA_AofI_Amend-embeddings.json  SJAA_AofI_Amend.json  SJAA_AofI_Amend.md  Seventies.html  eph70.html  eph71.html  eph72.html  eph73.html  eph74.html  eph75.html  eph76.html  eph77.html  eph78.html  eph79.html
Sixties/: SJAA1961-embeddings.json  SJAA1961.json  SJAA1961.txt  SJAA1964-embeddings.json  SJAA1964.json  SJAA1964.txt  SJAA1965.json  (+12 more)
pdf-text-extractor/: BATCH_USAGE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
pdf-text-extractor/examples/: batch_process.py
pdf-text-extractor/pdf_text_extractor/: __init__.py  batch.py  cli.py  extractor.py  inject.py  injector.py
(+1925 files in other folders)
