[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-text-extractor"
version = "1.0.0"
description = "Vision-based PDF text extraction using Claude AI"
readme = "README.md"
authors = [
    {name = "Claude", email = "noreply@anthropic.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.39.0",
    "pymupdf>=1.23.0",
]

[project.scripts]
pdf-extract = "pdf_text_extractor.cli:main"
pdf-inject = "pdf_text_extractor.inject:main"

[project.urls]
Homepage = "https://github.com/yourusername/pdf-text-extractor"
